# TelegramBot

./: .dockerignore  .env-mac  .envrc  .gitignore  Dockerfile  Makefile  README.md  azure-pipeline.yaml  docker-compose.yaml  getdata.py  gettrm.py  main.py  pyproject.toml  requirements.txt
capacity/functionality1/: values.yaml
capacity/functionality2/: values.yaml
k8s/: deployment.yaml  sealedSecret.yaml  secret.yaml
src/: __init__.py  fb.py  ig.py  images.py  logger.py  money.py  nrandom.py  tables.py  xbox_games.py
