[project]
name = ""
requires-python = ">=3.11,<3.12"
version = "0.0.1"
dependencies = [
    "beautifulsoup4==4.11.2",
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pytelegrambotapi==4.30.0",
    "requests>=2.33.0",
    "tabulate==0.8.10",
    "lxml>=6.1.0",
    "urllib3>=2.6.0",
    "fonttools>=4.60.2",
]
[tool.uv]
constraint-dependencies = ["pillow>=12.2.0", "urllib3>=2.7.0", "idna>=3.15"]

