[project]
name = "telegrambot"
requires-python = ">=3.13"
version = "0.0.1"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pytelegrambotapi==4.30.0",
    "requests>=2.33.0",
    "tabulate==0.8.10",
    "lxml>=6.1.0",
    "urllib3>=2.6.0",
    "fonttools>=4.60.2",
    "scrapling[fetchers]>=0.4.9",
]
[tool.uv]
constraint-dependencies = ["pillow>=12.2.0", "urllib3>=2.7.0", "idna>=3.15"]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'aarch64'"
]